# granted-flask

./: CONTRIBUTING.md  README.md  pyproject.toml  shell.py
.github/workflows/: release.yml
.vendor/: get-poetry.py  install-poetry.py
granted_flask/: setup.py  shell.py
tests/: test_granted_flask.py
