[tool.poetry]
name = "granted-flask"
version = "0.1.0"
description = ""
authors = ["Common Fate <hello@commonfate.io>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."flask.commands"]
"shell" = "granted_flask.shell:shell_command"